--- a/src/components/App.css
+++ b/src/components/App.css
@@ -42,4 +42,5 @@
 .card{
     border-radius: .3rem;
     background-color: #fff;
+    box-shadow: 0 0 20px -4px rgb(0 0 0 / .1), 0 0 6px -4px rgb(0 0 0 / .1);
 }
