--- a/src/components/proyects-card/index.css
+++ b/src/components/proyects-card/index.css
@@ -1,7 +1,8 @@
 .proyects-card{
-    height: 100%;
+    height: 98.69%;
     grid-column: 2/ span 2;
-    grid-row: 1/span 4;
+    grid-row: 2/span 4;
+
 }
 
 .proyects-card h5{
@@ -21,8 +22,14 @@
 .proyects__item{
     width: 100%;
     height: 100%;
-    background-color: red;
-    border-radius: 5px;
+    border-radius: .3rem;
+    background-color: #fff;
+    box-shadow: 0 0 15px 0 rgb(0 0 0 / .1),0 0 15px 0 rgb(0 0 0 / .1),0 0 15px 0 rgb(0 0 0 / .1);
+}
+
+.item__proyect-name{
+    margin: 20px;
+    font-size: 15px;
 }
 
 @media (max-width:990px) {
