--- a/src/components/tech-stack-card/index.css
+++ b/src/components/tech-stack-card/index.css
@@ -7,6 +7,7 @@
 
 .tech-card__title{
     font-size: larger;
+    color: var(--text-primary-color);
 }
 
 .tech-card__items{
@@ -19,7 +20,7 @@
 .tech-card__items div{
     background-color: rgba(154, 154, 255, 0.354);
     border-radius: 10px;
-    color: #000;
+    color: var(--text-secondary-color);
     padding: 2px 13px;
     font-weight: 600;
     border: 1px solid rgba(76, 38, 246, 0.387);
