--- a/src/components/Education-card/index.css
+++ b/src/components/Education-card/index.css
@@ -6,18 +6,19 @@
 
 .education-card__title{
     font-size: larger;
-   
+    color: var(--text-primary-color);
 }
 
 .education-card__body{
-    border-left: 2px solid rgba(85, 85, 85, 0.407);
+    border-left: 2px solid var(--text-secondary-color);
     margin: 30px 0;
     height: max-content;
     padding-left: 20px;
     position: relative;
+    color: var(--text-secondary-color);
 }
 .education-card__body div{
-    background-color:rgb(85, 85, 85);
+    background-color:var(--text-secondary-color);
     border-radius: 50%;
     width: 10px;
     height: 10px;
