--- a/src/components/avatar-card/index.css
+++ b/src/components/avatar-card/index.css
@@ -24,7 +24,7 @@
     margin: 35px;
     max-width: 100px;
     border-radius: 50%;
-    border: 4px solid #fff;
+    border: 4px solid var(--card-color);
     z-index: 2;
 }
 
@@ -32,21 +32,45 @@
 .avatar-card__name{
     font-size: large;
     margin-bottom: 20px;
+    color: var(--text-primary-color);
 }
 
 .avatar-card__info{
     font-weight: 600;
     margin: 0 30px;
     margin-bottom: 50px;
-    color: #888;
+    color: var(--text-secondary-color);
 }
 
 .btn-blue{
     margin-bottom: 30px;
 }
 
+.avatar-card__background-image ion-icon{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: var(--card-color);
+    border-radius: 50%;
+    padding: 5px;
+    color: var(--text-primary-color);
+}
 
-
+.btn-resume{
+    display: flex;
+}
+.btn-resume span{
+    margin: 0;
+    font-size: 1em;
+    color: var(--text-primary-color);
+}
+.btn-resume ion-icon{
+    margin-right: 7px;
+    font-size: 1.4em;
+    position: relative;
+    bottom: 2px;
+    color: var(--text-primary-color);
+}
 
 @media (max-width:990px) {
     .avatar-card__img{
