--- a/src/components/proyects-card/index.css
+++ b/src/components/proyects-card/index.css
@@ -5,37 +5,87 @@
 
 }
 
-.proyects-card h5{
-    margin:50px  50px;
+.head-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 40px 0;
+}
+.head-container h5{
     font-size: 30px;
+    color: var(--text-primary-color);
+    padding: 25px;
+    display: inline;
+}
+
+.head-container a{
+    margin-right: 30px;
+
 }
 
 .proyects{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(90px,300px));
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     grid-template-rows: repeat(auto-fit,minmax(200px,1fr));
     grid-auto-rows: minmax(200px,1fr);
-    padding: 20px;
     gap: 10px;
+    padding: 0 30px 50px;
 }
 
 .proyects__item{
-    width: 100%;
-    height: 100%;
-    border-radius: .3rem;
-    background-color: #fff;
-    box-shadow: 0 0 15px 0 rgb(0 0 0 / .1),0 0 15px 0 rgb(0 0 0 / .1),0 0 15px 0 rgb(0 0 0 / .1);
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    border: 1px solid rgba(52, 10, 239, 0.378);
+    background-color: rgba(154, 154, 255, 0.334);
 }
 
-.item__proyect-name{
-    margin: 20px;
-    font-size: 15px;
+.proyects__item:hover{
+    border: 1px solid rgba(52, 10, 239, 0.378);
+    background-color: rgba(154, 154, 255, 0.400);
 }
+.item__proyect-name{
+    color: var(--text-primary-color);
+    margin: 20px 0;
+    font-size: 15px;
+    
+}
+
+.item__proyect-info{
+    width: fit-content;
+    height: fit-content;
+    padding: 0 15px;
+}
+
+.proyects__item-title-container{
+    display: flex;
+    position: relative;
+    justify-items: flex-start;
+}
+
+.proyects__item-title-container ion-icon{
+    align-self: center;
+    margin-left: 20px;
+}
+
+.item__proyect-branches{
+    padding: 10px;
+}
+.item__proyect-branches ion-icon{
+    margin: 0;
+}
+.item__proyect-branches span{
+    margin: 0 10px 0 4px;
+    position: relative;
+    top: -3px;
+}
+
 
 @media (max-width:990px) {
     .proyects-card{
         grid-column: 1 !important;
-        grid-row: 5 !important;
+        grid-row: 6 !important;
     
     }
     .proyects{
