--- a/src/components/proyects-card/index.css
+++ b/src/components/proyects-card/index.css
@@ -55,7 +55,6 @@
     color: var(--text-primary-color);
     margin: 20px 0;
     font-size: 15px;
-    
 }
 
 .item__proyect-info{
@@ -70,6 +69,7 @@
     display: flex;
     position: relative;
     justify-items: flex-start;
+    gap: 1vh;
 }
 
 .proyects__item-title-container ion-icon{
