--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,7 +14,10 @@ a{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', "Courier New";
+}
+*::selection{
+    background-color:transparent;
 }
 
 .mainConteiner{
