--- a/src/components/avatar-card/index.css
+++ b/src/components/avatar-card/index.css
@@ -5,9 +5,8 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
-    height: fit-content;
+    height: 100%;
 }
-
 .avatar-card__background-image{
     position: absolute;
     width: 100%;
@@ -17,7 +16,10 @@
 }
 .avatar-card__background-image img{
     position: relative;
-    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    width: 100%; 
+    height: 100%;
 }
 
 .avatar-card__img{
@@ -26,6 +28,8 @@
     border-radius: 50%;
     border: 4px solid var(--card-color);
     z-index: 2;
+    height: 100%;
+    width: 100%;
 }
 
 
@@ -49,7 +53,7 @@
     background-color:rgba(145, 145, 255, 0.648);
 }
 
-.avatar-card__background-image ion-icon{
+.avatar-card__background-image span{
     position: absolute;
     top: 20px;
     left: 20px;
@@ -61,17 +65,18 @@
 
 .btn-resume{
     display: flex;
+    align-items: center;
+    position: relative;
+    gap: 7px;
 }
-.btn-resume span{
-    margin: 0;
+.btn-resume {
+    margin-bottom: 30px;
     font-size: 1em;
     color: var(--text-primary-color);
 }
-.btn-resume ion-icon{
-    margin-right: 7px;
-    font-size: 1.4em;
+.btn-resume span:first-child{
+    font-size: 1.3em;
     position: relative;
-    bottom: 2px;
     color: var(--text-primary-color);
 }
 
