--- a/src/components/info-card/index.css
+++ b/src/components/info-card/index.css
@@ -1,7 +1,7 @@
 .info-card{
     display: flex;
     flex-direction: column;
-    padding: 5px 2.5vh;
+    padding: 5px 17px;
     justify-content: space-around;
     grid-row: 2;
     min-height: 250px;
@@ -13,7 +13,7 @@
     width: 100%;
     align-items: center;
     flex-wrap: wrap;
-    gap: .7vh;
+    gap: 4.76px;
 }
 .info-card__item-container{
     color: var(--text-secondary-color);
@@ -25,12 +25,12 @@
     align-items: center;
 }
 .info-card__item-container div:first-child{
-    font-size: 1.9vh;
+    font-size: 12.92px;
     
 }
 
 .info-card__item-container div:last-child {
-    font-size: 1.9vh;
+    font-size: 12.92px;
     justify-content: flex-end;
     position: relative;
     display: flex;
@@ -48,13 +48,13 @@
 
 .info-card__item div:last-child ion-icon{
     margin: 0;
-    font-size: 1.8vh;
+    font-size: 12.24px;
     align-self: center;
 }
 
 ion-icon{
     flex-shrink: 1;
-    font-size: 2.5vh;
+    font-size:  17px;
     color: var(--text-primary-color);
     cursor: pointer;
 }
@@ -75,3 +75,6 @@ ion-icon{
         margin-top: -10px;
     }
 }
+
+
+
