--- a/src/components/swiper-card/index.css
+++ b/src/components/swiper-card/index.css
@@ -11,12 +11,18 @@
 }
 
 .swiper-slide {
+  font-weight: 600;
   font-size: 18px;
   color: #fff;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   padding: 40px 60px;
 }
+
+.swiper-slide p{
+  /*background-color: rgba(255, 255, 255, 0.168);*/
+}
+
 
 .parallax-bg {
   position: absolute;
