--- a/src/components/avatar-card/index.css
+++ b/src/components/avatar-card/index.css
@@ -28,8 +28,8 @@
     border-radius: 50%;
     border: 4px solid var(--card-color);
     z-index: 2;
-    height: 100%;
-    width: 100%;
+    height: 92px;
+    width: 92px;
 }
 
 
