--- a/src/components/proyects-card/index.css
+++ b/src/components/proyects-card/index.css
@@ -26,7 +26,7 @@
 
 .proyects{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     grid-template-rows: repeat(auto-fit,minmax(200px,1fr));
     grid-auto-rows: minmax(200px,1fr);
     gap: 10px;
@@ -78,7 +78,19 @@
 }
 
 .item__proyect-branches{
-    padding: 10px;
+    padding: 15px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.repo-language-color {
+    position: relative;
+    top: 2px !important;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    border: 1px solid rgba(255,255,255,0.2);
+    border-radius: 50%;
+    background-color: transparent;
 }
 .item__proyect-branches ion-icon{
     margin: 0;
