--- a/src/components/Education-card/index.css
+++ b/src/components/Education-card/index.css
@@ -2,6 +2,10 @@
     padding: 1.5rem;
     height: 100%;
     grid-row: 4;
+    animation-name: leftCard;
+    animation-iteration-count: 1;
+    animation-duration: 600ms;
+    animation-direction: reverse;
 }
 
 .education-card__title{
@@ -15,10 +19,10 @@
     height: max-content;
     padding-left: 20px;
     position: relative;
-    color: var(--text-secondary-color);
+    color: var(--text-primary-color);
 }
 .education-card__body div{
-    background-color:var(--text-secondary-color);
+    background-color:var(--text-primary-color);
     border-radius: 50%;
     width: 10px;
     height: 10px;
@@ -27,6 +31,8 @@
     top: 7px;
 }
 @media (max-width:1130px) {
+      
+
     .education-card{
         grid-column: 1 !important;
         grid-row: 4 !important;
