--- a/src/components/avatar-card/index.css
+++ b/src/components/avatar-card/index.css
@@ -6,7 +6,13 @@
     align-items: center;
     overflow: hidden;
     height: 100%;
+    animation-name: leftCard;
+    animation-iteration-count: 1;
+    animation-duration: 600ms;
+    animation-direction: reverse;
 }
+
+
 .avatar-card__background-image{
     position: absolute;
     width: 100%;
@@ -23,7 +29,7 @@
 }
 
 .avatar-card__img{
-    margin: 35px;
+    margin: 35px 25px 20px;
     max-width: 100px;
     border-radius: 50%;
     border: 4px solid var(--card-color);
@@ -35,7 +41,7 @@
 
 .avatar-card__name{
     font-size: large;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     color: var(--text-primary-color);
 }
 
@@ -61,6 +67,12 @@
     border-radius: 50%;
     padding: 5px;
     color: var(--text-primary-color);
+    cursor: pointer;
+}
+
+.avatar-card__background-image span:active{
+    transform: rotate(30deg);
+    transition: transform 100ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .btn-resume{
@@ -81,6 +93,8 @@
 }
 
 @media (max-width:1130px) {
+    
+    
     .avatar-card__img{
         align-self: flex-start;
     }
