--- a/src/components/proyects-card/index.css
+++ b/src/components/proyects-card/index.css
@@ -64,7 +64,8 @@
     width: fit-content;
     height: fit-content;
     padding: 0 15px;
-    color: var(--text-secondary-color);
+    color: #000;
+    font-style: italic;
 }
 
 
