--- a/src/components/Education-card/index.css
+++ b/src/components/Education-card/index.css
@@ -11,15 +11,17 @@
 .education-card__title{
     font-size: larger;
     color: var(--text-primary-color);
+    margin-bottom: 30px;
 }
 
 .education-card__body{
     border-left: 2px solid var(--text-secondary-color);
-    margin: 30px 0;
+    /*margin: 30px 0;*/
     height: max-content;
     padding-left: 20px;
     position: relative;
     color: var(--text-primary-color);
+    padding: 20px;
 }
 .education-card__body div{
     background-color:var(--text-primary-color);
@@ -28,7 +30,8 @@
     height: 10px;
     position: absolute;
     left: -6px;
-    top: 7px;
+    top: 40px;
+
 }
 @media (max-width:1130px) {
       
